FORUM COMMENTS alignment issue fixed - 2

--- a/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
+++ b/docroot/sites/all/themes/ambitious/sass/layouts/topic-forum.scss
@@ -2147,6 +2147,7 @@ fieldset{
 			  font-size:16px;
 			  background:$white;
 			  word-wrap: break-word;
+			  position: relative;
 			  @include breakpoint($mobile){
 			    padding:15px;
 			  }
